--- a/burger-queen/package.json
+++ b/burger-queen/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy": "gh-pages -d src"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -22,9 +21,7 @@
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "deploy": "^1.0.3",
-    "gh-pages": "^4.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
